# transaction-service/src/main/java/com/example/transaction/entrypoint/controller/errorhandler/ControllerErrorAdvice.java
@@ -1,5 +1,7 @@
 package com.example.transaction.entrypoint.controller.errorhandler;
 
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
@@ -10,14 +12,18 @@ import com.example.transaction.dto.ErrorResponse;
 public class ControllerErrorAdvice {
 
     @ExceptionHandler(TransactionServiceException.class)
-    public ErrorResponse handleGenericException(TransactionServiceException ex) {
-        return new ErrorResponse()
-            .message(ex.getMessage());
+    public ResponseEntity<ErrorResponse> handleGenericException(TransactionServiceException ex) {
+        return ResponseEntity
+            .status(HttpStatus.BAD_REQUEST)
+            .body(new ErrorResponse()
+                .message(ex.getMessage()));
     }
 
     @ExceptionHandler(Exception.class)
-    public ErrorResponse handleGenericException(Exception ex) {
-        return new ErrorResponse()
-            .message(ex.getMessage());
+    public ResponseEntity<ErrorResponse> handleGenericException(Exception ex) {
+        return ResponseEntity
+            .status(HttpStatus.INTERNAL_SERVER_ERROR)
+            .body(new ErrorResponse()
+                .message(ex.getMessage()));
     }
 }
